Changelog
=========

Head
~~~~

- Added resource rebase support. [malthe]

