@@ -1,5 +1,6 @@
 from chameleon.core import template
 
+import os
 import language
 
 class DynamicHTMLFile(template.TemplateFile):
@@ -11,3 +12,16 @@ class DynamicHTMLFile(template.TemplateFile):
     def render(self, content={}, attributes={}, **kwargs):
         return template.TemplateFile.render(
             self, content=content, attributes=attributes, **kwargs)
+
+    def mtime(self):
+        """Return the most recent modification times from the template
+        file itself and any XSS-files included."""
+
+        filenames = [self.filename]
+        filenames.extend(self.parser.file_dependencies)
+        
+        try:
+            return max(map(os.path.getmtime, filenames))
+        except (IOError, OSError):
+            return 0
+        
